header has done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./SRC/CSS/mobile.css" />
     <link rel="stylesheet" href="./SRC/CSS/tablet.css" />
     <link rel="stylesheet" href="./SRC/FONTS/fonts.css" />
+    <link rel="stylesheet" href="./SRC/CSS/animation.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Montserrat:wght@400;600;700;800&family=Noto+Serif+Georgian&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300;1,400&family=Russo+One&display=swap"
       rel="stylesheet"
@@ -53,10 +54,10 @@
               </div>
             </div>
             <div class="header-title-container">
-              <h2 class="header-title-text">PROFESSIONAL</h2>
-              <h2 class="header-title-text">AND PAINLESS</h2>
-              <h2 class="header-title-under-text">DENTAL TREATMENT</h2>
-              <div class="header-title-desc-container">
+              <h2 class="header-title-text header-title-animation-text-1">PROFESSIONAL</h2>
+              <h2 class="header-title-text header-title-animation-text-2">AND PAINLESS</h2>
+              <h2 class="header-title-under-text header-title-animation-text-3">DENTAL TREATMENT</h2>
+              <div class="header-title-desc-container header-title-desc-animation">
                 <p class="header-title-desc-text">
                   I will conduct a complete diagnosis of the oral cavity and
                   build an individual treatment plan. Call and get a completely
@@ -64,7 +65,7 @@
                 </p>
               </div>
             </div>
-            <div class="header-main-buttons-container">
+            <div class="header-main-buttons-container header-main-buttons-animation">
               <div class="header-main-buttons-box">
                 <div class="header-main-button-one-block">
                   <a href="tel:+380999999999" class="header-main-button-one"
@@ -76,7 +77,7 @@
                 </div>
               </div>
             </div>
-            <div class="header-cards-container">
+            <div class="header-cards-container header-cards-animation">
               <div class="header-card">
                 <div class="header-card-title">
                   <h2 class="header-card-title">15</h2>
