--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <span class="header-language-text-en">EN</span> 
                 </div>
               </div>
+              <div class="burger"><span></span></div>
             </div>
             <div class="header-title-container">
               <h2 class="header-title-text header-title-animation-text-1">PROFESSIONAL</h2>
@@ -545,5 +546,6 @@
         </div>
       </footer>
     </section>
+    <script src="./SRC/JS/script.js"></script>
   </body>
 </html>
